// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateUser: action close overlay 1`] = `
Object {
  "isOpen": false,
  "type": "BID_CLOSE_MODAL",
}
`;

exports[`CreateUser: action create user failure 1`] = `
Object {
  "error": "ERROR",
  "isOpen": false,
  "spinning": false,
  "type": "CREATE_USER_FAILURE",
}
`;

exports[`CreateUser: action create user request 1`] = `
Object {
  "isOpen": true,
  "password": "pass",
  "spinning": true,
  "type": "CREATE_USER_REQUEST",
  "username": "tanuj",
}
`;

exports[`CreateUser: action create user success 1`] = `
Object {
  "isOpen": false,
  "key": "562a277d3b5ace17d92348c36f412622aaffafdb",
  "spinning": false,
  "type": "CREATE_USER_SUCCESS",
}
`;

exports[`CreateUser: action open overlay 1`] = `
Object {
  "isOpen": true,
  "type": "BID_OPEN_MODAL",
}
`;
